Assigned owner to a problem. Changed JDO ownership relations